--- a/projetoValueWare/principal/index.html
+++ b/projetoValueWare/principal/index.html
@@ -26,7 +26,7 @@
     <body>
         <nav class="navbar navbar-expand-lg navbar-light ">
             <a class="navbar-brand" href="#">
-                <img src="../imagens/logo-removebg-preview.png" width="250" height="120"
+                <img src="../imagensGeral/logo-removebg-preview.png" width="250" height="120"
                     class="d-inline-block align-top" alt="Logo">
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
@@ -42,61 +42,21 @@
                         <a class="nav-link" href="../saude/saude.html">Saúde</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Educação</a>
+                        <a class="nav-link" href="../educacao/educacao.html">Educação</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Sobre Nós</a>
+                        <a class="nav-link" href="../sobreNos/sobreNos.html">Sobre Nós</a>
                     </li>
                 </ul>
             </div>
         </nav>
-
         <div class="container mt-5">
-            <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
-                <div class="carousel-inner">
-                    <div class="carousel-item active">
-                        <img src="../imagens/slides/nossosServiços.png" class="d-block w-100" alt="..."
-                            style="margin-bottom: 5%;">
-                    </div>
-                    <div class="carousel-item">
-                        <img src="../imagens/slides/PRINCIPIOS E VALORES (1).png" class="d-block w-100" alt="..."
-                            style="margin-bottom: 5%;">
-                    </div>
-                    <div class="carousel-item">
-                        <img src="../imagens/slides/retenção de alunos.png" class="d-block w-100" alt="..."
-                            style="margin-bottom: 5%;">
-                    </div>
-                </div>
-            </div>
 
-            <div class="container">
-                <div class="jumbotron">
-                <p class="lead">
-                    <h1 class="display-4">Value Ware: Sua Parceira Estratégica nos Setores de Educação e Saúde</h1>
-                    Somos uma equipe de especialistas altamente qualificados e experientes, prontos para ajudar
-                    sua instituição a alcançar o sucesso desejado. Nossa abordagem baseia-se em compreender
-                    profundamente as necessidades específicas do seu negócio e desenvolver estratégias eficazes
-                    para superar desafios e impulsionar seu crescimento, com o desenvolvimento e melhoria de
-                    processos e produtos e a facilitação da transformação digital, com foco na geração de valor
-                    identificando oportunidades de otimização de processos, redução de desperdícios (Lean),
-                    expansão e novos mercados para entregas de valor
-                    No atual cenário altamente competitivo e em constante evolução, entendemos a importância
-                    de se destacar da concorrência. É por isso que oferecemos serviços personalizados de
-                    consultoria, projetados para atender às demandas exclusivas dos setores de educação e saúde.
-                    Nossos profissionais possuem um profundo conhecimento das melhores práticas e tendências
-                    emergentes nesses setores, permitindo que ofereçamos insights valiosos e soluções
-                    inovadoras.
-                    Com a Value Ware ao seu lado, você terá acesso a uma ampla gama de conhecimentos e
-                    expertise necessários para impulsionar o sucesso de seu negócio gerando valor para seus
-                    clientes, colaboradores e gestores.
-                </p>
-            </div>
-            </div>
-        
             <div class="row">
                 <div class="col-md-4">
                     <div class="card">
-                        <img src="../imagens/saude.jpg" class="card-img-top" alt="Imagem de Saúde">
+                        <a href="../saude/saude.html">
+                            <img src="./imagens/saude.jpg" class="card-img-top" alt="Imagem de Saúde"></a>
                         <div class="card-body">
                             <h5 class="card-title">Saúde</h5>
                             <p class="card-text">Informações sobre saúde e bem-estar.</p>
@@ -106,7 +66,8 @@
 
                 <div class="col-md-4">
                     <div class="card">
-                        <img src="../imagens/educacao.png" class="card-img-top" alt="Imagem de Educação">
+                        <a href="../educacao/educacao.html"> <img src="./imagens/educacao.png" class="card-img-top"
+                                alt="Imagem de Educação"></a>
                         <div class="card-body">
                             <h5 class="card-title">Educação</h5>
                             <p class="card-text">Recursos educacionais e informações relevantes.</p>
@@ -116,7 +77,8 @@
 
                 <div class="col-md-4">
                     <div class="card">
-                        <img src="../imagens/Sobre nós.png" class="card-img-top" alt="Imagem de Sobre Nós">
+                        <a href="../sobreNos/sobreNos.html"><img src="./imagens/Sobre nós.png" class="card-img-top"
+                                alt="Imagem de Sobre Nós"></a>
                         <div class="card-body">
                             <h5 class="card-title">Sobre Nós</h5>
                             <p class="card-text">Conheça mais sobre nossa equipe e missão.</p>
@@ -126,50 +88,71 @@
             </div>
 
         </div>
-        <div class="container mt-5" id="formularioContato">
-            <div class="row mt-4">
-                <div class="col-md-8 offset-md-2">
-                    <h2 class="text-center mb-4">Entre em Contato</h2>
-                    <form action="mailto:contato@valueware.com.br" method="post">
-                        <div class="mb-3">
-                            <label for="nome" class="form-label">Nome *</label>
-                            <input type="text" class="form-control" id="nome" name="nome" required>
-                        </div>
-                        <div class="mb-3">
-                            <label for="telefone" class="form-label">Telefone</label>
-                            <input type="text" class="form-control" id="telefone" name="telefone">
-                        </div>
-                        <div class="mb-3">
-                            <label for="email" class="form-label">E-mail *</label>
-                            <input type="email" class="form-control" id="email" name="email" required>
-                        </div>
-                        <div class="mb-3">
-                            <label for="email" class="form-label">Empresa</label>
-                            <input type="text" class="form-control" id="empresa" name="empresa" required>
-                        </div>
-                        <div class="mb-3">
-                            <label for="cargo" class="form-label">Cargo</label>
-                            <input type="text" class="form-control" id="cargo" name="cargo" required>
-                        </div>
-                        <div class="mb-3">
-                            <label for="mensagem" class="form-label">Mensagem </label>
-                            <textarea class="form-control" id="mensagem" name="mensagem" rows="4"></textarea>
-                        </div>
-                        <button type="submit" class="btn btn-primary">Enviar Mensagem</button>
-                    </form>
+        <div class="float-right">
+            <div class="btn-group">
+                <button type="button" id="btn-contato" class="btn btn-success">
+                    <i class="fa fa-envelope" aria-hidden="true"></i>
+                </button>
+            </div>
+        </div>
+
+        <div class="modal fade" id="myModal" tabindex="-1" aria-labelledby="myModalLabel" aria-hidden="true">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="myModalLabel">Contato</h5>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    <div class="modal-body">
+                        <form action="/enviar" method="post">
+                            <div class="form-group">
+                                <label for="nome">Nome*</label>
+                                <input type="text" class="form-control" id="nome" name="nome" required>
+                            </div>
+                            <div class="form-group">
+                                <label for="telefone">Telefone</label>
+                                <input type="text" class="form-control" id="telefone" name="telefone">
+                            </div>
+                            <div class="form-group">
+                                <label for="email">E-mail*</label>
+                                <input type="email" class="form-control" id="email" name="email" required>
+                            </div>
+                            <div class="form-group">
+                                <label for="empresa">Empresa</label>
+                                <input type="text" class="form-control" id="empresa" name="empresa">
+                            </div>
+                            <div class="form-group">
+                                <label for="cargo">Cargo</label>
+                                <input type="text" class="form-control" id="cargo" name="cargo">
+                            </div>
+                            <div class="form-group">
+                                <label for="mensagem">Mensagem</label>
+                                <textarea class="form-control" id="mensagem" name="mensagem"></textarea>
+                            </div>
+                            <button type="submit" class="btn btn-primary">Enviar</button>
+                        </form>
+                    </div>
                 </div>
             </div>
         </div>
+
         <footer class="bg-dark text-white py-4">
-            <div class="container">
+            <div class="container-fluid">
                 <div class="row justify-content-center">
                     <div class="col-auto">
-                        <a href="https://www.facebook.com/TelecallBr" class="text-white me-3"
-                            style="font-size: 24px;"><i class="fa-brands fa-facebook"></i></a>
+                        <a href="https://www.facebook.com/TelecallBr" class="text-white me-3" style="font-size: 24px;">
+                            <i class="fa-brands fa-facebook"></i>
+                        </a>
                         <a href="https://www.linkedin.com/company/telecall/?originalSubdomain=br"
-                            class="text-white me-3" style="font-size: 24px;"><i class="fa-brands fa-linkedin"></i></a>
+                            class="text-white me-3" style="font-size: 24px;">
+                            <i class="fa-brands fa-linkedin"></i>
+                        </a>
                         <a href="https://www.instagram.com/telecallbr/" class="text-white me-3"
-                            style="font-size: 24px;"><i class="fa-brands fa-instagram"></i></a>
+                            style="font-size: 24px;">
+                            <i class="fa-brands fa-instagram"></i>
+                        </a>
                     </div>
                 </div>
                 <div class="row justify-content-center mt-2">
@@ -177,8 +160,41 @@
                         <span>© 2023 Todos os direitos reservados.</span>
                     </div>
                 </div>
+                <div class="row mt-4">
+                    <div class="col-md-6 offset-md-3">
+                        <h2 class="text-center mb-4">Entre em Contato</h2>
+                        <form action="mailto:contato@valueware.com.br" method="post">
+                            <div class="mb-3">
+                                <label for="nome" class="form-label">Nome *</label>
+                                <input type="text" class="form-control" id="nome" name="nome" required>
+                            </div>
+                            <div class="mb-3">
+                                <label for="telefone" class="form-label">Telefone</label>
+                                <input type="text" class="form-control" id="telefone" name="telefone">
+                            </div>
+                            <div class="mb-3">
+                                <label for="email" class="form-label">E-mail *</label>
+                                <input type="email" class="form-control" id="email" name="email" required>
+                            </div>
+                            <div class="mb-3">
+                                <label for="empresa" class="form-label">Empresa</label>
+                                <input type="text" class="form-control" id="empresa" name="empresa" required>
+                            </div>
+                            <div class="mb-3">
+                                <label for="cargo" class="form-label">Cargo</label>
+                                <input type="text" class="form-control" id="cargo" name="cargo" required>
+                            </div>
+                            <div class="mb-3">
+                                <label for="mensagem" class="form-label">Mensagem</label>
+                                <textarea class="form-control" id="mensagem" name="mensagem" rows="4"></textarea>
+                            </div>
+                            <button type="submit" class="btn btn-primary">Enviar Mensagem</button>
+                        </form>
+                    </div>
+                </div>
             </div>
         </footer>
+
 
 
         <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
